2017-09-15  Manfred Brath  <manfred.brath@uni-hamburg.de>

	* arts-2-3-794

	* src/m_checked.cc (cloudbox_checkedCalc):  Changed the check for 
	particle_bulkprop_field. If the lower cloudbox limit is set to the lowest
	atmospheric level, then the check will not give an error if the
	particle_bulkprop_field has non-zero value at the lower cloudbox boundary.	
	
	* src/math_funcs.cc (mod_gamma_dist): Changed the error message
	
	* src/methods.cc (psdS2M, psdMY2): Written built-in doc
	
    * src/m_microphysics.cc: 
    
    (psdS2M, psdMY2) 
    Added new two moment scheme distributions. Particle size distribution values
    are tested. The new scheme will give except for the differences due to 
    rescalling the same pndfields as pnd_fieldS2M/MY2. The partial derivatives
    need further testing,  but so far they seem to be working. 
	
	(dNdD_SM2, dNdD_SM2_M, dNdD_MY2, dNdD_MY2_M) 
	Changed to handle the new calls of psd_S2M, psd_MY2.
	
	(pnd_fieldCalcFromParticleBulkProps):
	Changed the check for particle_bulkprop_field. If the lower cloudbox limit 
	is set to the lowest atmospheric level, then the check will not give an 
	error if the particle_bulkprop_field has non-zero value at the lower 
	cloudbox boundary.
	
	* src/microphysics.{h,cc} (psd_MY2, psd_S2M):
	Changed to handle a grid of sizes at once and changed the tags defining the
	hydrometeor) scheme.
	
	* src/microphysics.cc (pnd_fieldS2M, pnd_fieldMY2): Changed to handle the 
	new calls of psd_S2M, psd_MY2.

2017-09-15 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-793

	* src/m_rte.cc (yCalc):
	Fixed order of parameters atmgeom_checked and atmfields_check to be the same
	as in methods.cc.

2017-09-14 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-792

	* src/methods.cc (PFromZSimple):
	Added md_data entry for PFromZSimple.

2017-09-11 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-791

	* src/m_retrieval.cc (ZFromPSimple):